# WORKFLOWS

./: .gitignore
ITZANA-KAANA/: BUILD.md  CLAUDE.md  Flowchart.md  QUICK_REF.md  SKILL.md  skills-lock.json
ITZANA-KAANA/KBs/: KB_ITZANA.json  KB_KAANA.json
ITZANA-KAANA/docs/: Analytics Bot_Itzana - Sheet1.csv  E-Concierge Itzana.md  FAQ.md  GUIA_PRUEBAS_EQUIPO.md  Itz'ana Prompt.txt  Itz'ana Transcript - Instagram.csv  PENDIENTES_2026-06-14.md  PRUEBAS_FASE1.md  Social Media Posts.docx  belize-hotels-chat-prd-phases-1-3.docx  belize-hotels-chat-unified-flow.mmd
ITZANA-KAANA/scripts/: search_context.ps1
ITZANA-KAANA/workflows/: Itzana_KB_Search.json  Itzana_Notifications.json  Itzana_Vectorizar_KB.json  PRINCIPAL.json
SPECTRUM AGENTE/: CLAUDE.md  INDEX.md  skills-lock.json
SPECTRUM AGENTE/.claude/: settings.local.json
SPECTRUM AGENTE/Agente Unificado/: AGENT PRINCIPAL.json  Analytics Centralizado.json  KB SEARCH.json  Lead Collector.json  Notifications Master.json  RSVP.json  Send Media.json  Sync_CRM.json  TEST_SUITE_COMPLETE.md  Vectorizar los KBs.json  WEB FORM.json
SPECTRUM AGENTE/KBs/: KB PMAR.json  KB PPO.json  KB PPOL.json  KB PSB.json  KB PVV.json
SPECTRUM AGENTE/docs/: auditoria_workflows_2026-05-25.md  estado_proyecto.md  multimedia_send_media_resumen.md  plan_spectrum_tester.md  reporte-fase2-mayo-2026.md  (+1 more)
SPECTRUM AGENTE/spectrum-sim-mcp/: .env.example  .gitignore  PLAN.md  README.md  pyproject.toml
SPECTRUM AGENTE/spectrum-sim-mcp/src/spectrum_sim_mcp/: __init__.py  config.py  mongo_client.py  n8n_client.py  server.py  webhook.py
(+75 files in other folders)
